# fun-lang

./: .gitignore  CMakeLists.txt  ReadMe.md  build.sh  flake.nix  test.lang
src/: ast.cpp  ast.hpp  codegen.cpp  codegen.hpp  codegen_exception.hpp  compiler.cpp  interpreter.cpp  interpreter.hpp  interpreter_exception.hpp  interpreter_main.cpp  lexer.cpp  lexer.hpp  lexer_exception.hpp  main.cpp  parser.cpp  parser.hpp  parser_exception.hpp  runner.cpp  runner.hpp  source_location.cpp  source_location.hpp  test_interpreter.cpp  tests.hpp
